#18 fixed overflow in rich button

--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -194,7 +194,6 @@
     line-height: 1.0714rem;
     text-align: center;
     color: #FFFFFF;
-    padding-bottom: 0.1429rem;
-    padding-right: 0.2857rem;
+    padding: .5rem 2.5rem;
   }
 }
